--- a/gamedata/configs/mod_system_zzz_saint_bhs_changes.ltx
+++ b/gamedata/configs/mod_system_zzz_saint_bhs_changes.ltx
@@ -17,12 +17,16 @@ boost_bleeding_restore							= 0.0025
 boost_radiation_restore							= 0.001
 
 ![bandage]
-boost_time										= 10
-boost_bleeding_restore							= 0.008
+boost_time										= 5
+boost_bleeding_restore							= 0.016
 
 ![jgut]
-boost_time										= 10
-boost_bleeding_restore							= 0.02
+boost_time										= 5
+boost_bleeding_restore							= 0.04
+
+![bandage_army]
+boost_time										= 5
+boost_bleeding_restore							= 0.024
 
 ![propital]
 boost_wound_immunity							= 0.005
