Fix incorrect item name comment in DLTX patch

--- a/gamedata/configs/mod_system_zzz_saint_bhs_changes.ltx
+++ b/gamedata/configs/mod_system_zzz_saint_bhs_changes.ltx
@@ -247,7 +247,7 @@ inv_weight										= 0.04
 boost_time										= 1
 boost_bleeding_restore							= 0.12
 
-; Tourniquet
+; Vinca
 ![drug_coagulant]
 cost											= 1880
 boost_bleeding_restore							= 0.00042
