Add anabiotics to patch, set custom cost value

--- a/gamedata/configs/mod_system_zzz_saint_bhs_changes.ltx
+++ b/gamedata/configs/mod_system_zzz_saint_bhs_changes.ltx
@@ -497,3 +497,7 @@ eat_satiety										= 0
 eat_thirstiness									= 0.2
 eat_sleepiness									= 0.35
 boost_telepat_protection						= 0.025
+
+; Anabiotic
+![drug_anabiotic]
+cost											= 6880
