--- a/gamedata/configs/mod_system_z_saint_bhs_changes.ltx
+++ b/gamedata/configs/mod_system_z_saint_bhs_changes.ltx
@@ -204,15 +204,6 @@ boost_time										= 180
 boost_health_restore							= 0.0015
 boost_bhs_healone								= 21
 
-; Survival Kit
-![survival_kit]
-cost											= 7200
-boost_time										= 90
-boost_health_restore							= 0.0015
-boost_radiation_restore							= 0.0004
-boost_bleeding_restore							= 0.05
-boost_bhs_healone								= 60
-
 ; Axyltallisal
 ![rebirth]
 cost											= 12000
@@ -223,8 +214,31 @@ boost_bleeding_restore							= 0.05
 boost_bhs_healone								= 60
 boost_bhs_painkiller							= 7
 
+; Survival Kit
+![survival_kit]
+cost											= 7200
+boost_time										= 90
+boost_health_restore							= 0.0015
+boost_radiation_restore							= 0.0004
+boost_bleeding_restore							= 0.05
+boost_bhs_healone								= 60
+
 
 ; Bleeding & Body
+
+; Vikasolum
+![drug_coagulant]
+cost											= 1880
+boost_time										= 300
+boost_bleeding_restore							= 0.00042
+boost_bhs_healone								= 11
+
+; Tranexyban Shot
+![zagustin]
+cost											= 2880
+boost_time										= 300
+boost_bleeding_restore							= 0.0009
+boost_bhs_healone								= 14
 
 ; Bandage
 ![bandage]
@@ -246,12 +260,6 @@ cost											= 1200
 inv_weight										= 0.04
 boost_time										= 1
 boost_bleeding_restore							= 0.15
-
-; Vinca
-![drug_coagulant]
-cost											= 1880
-boost_bleeding_restore							= 0.00042
-boost_bhs_healone								= 11
 
 ; Synthetic Splint
 ![splint]
