Set max uses for single-use BHS items and CMS

--- a/gamedata/configs/mod_system_z_saint_bhs_changes.ltx
+++ b/gamedata/configs/mod_system_z_saint_bhs_changes.ltx
@@ -243,6 +243,7 @@ boost_bhs_limb_restore							= 0.17
 ; Bandage
 ![bandage]
 cost											= 500
+max_uses										= 1
 inv_weight										= 0.02
 boost_time										= 1
 boost_bleeding_restore							= 0.012
@@ -251,6 +252,7 @@ boost_bhs_limb_splint							= 0.012
 ; Military Bandage
 ![bandage_army]
 cost											= 800
+max_uses										= 1
 inv_weight										= 0.028
 boost_time										= 1
 boost_bleeding_restore							= 0.022
@@ -259,6 +261,7 @@ boost_bhs_limb_splint							= 0.012
 ; Tourniquet
 ![jgut]
 cost											= 1200
+max_uses										= 1
 inv_weight										= 0.04
 boost_time										= 1
 boost_bleeding_restore							= 0.15
@@ -266,16 +269,19 @@ boost_bhs_limb_splint							= 0.012
 
 ; Synthetic Splint
 ![splint]
+max_uses										= 1
 cost											= 800
 boost_bhs_limb_splint							= 0.5
 
 ; SAM Splint
 ![alu_splint]
+max_uses										= 1
 cost											= 1400
 boost_bhs_limb_splint							= 0.5
 
 ; Surgical Field Kit
 ![cms]
+max_uses										= 6
 cost											= 8000
 boost_bhs_broken_limb_restore					= 0.25
 
