Add dummy anim override for vodka (use bottle)

--- a/gamedata/configs/items/items/mod_animations_settings_zzz_bhs_changes.ltx
+++ b/gamedata/configs/items/items/mod_animations_settings_zzz_bhs_changes.ltx
@@ -454,3 +454,14 @@ snd = interface\item_usage\anabiotic
 cam = itemuse_anm_effects\biotic.anm
 tm = 22000
 helm = false
+
+
+
+; Drinks
+
+@[vodka_quality]
+snd = interface\item_usage\vodka_use
+anm = item_ea_cmuphob_vodka ; wpn_vodka_hemupob_hud, wpn_vodka_cmuphob_hud
+cam = itemuse_anm_effects\vodka_use.anm
+tm = 4300
+helm = false
