Make loadout overrides overwrite other overrides

--- a/gamedata/configs/items/settings/mod_new_game_loadouts_z_saint_overrides.ltx
+++ b/gamedata/configs/items/settings/mod_new_game_loadouts_z_saint_overrides.ltx
@@ -1,18 +1,25 @@
+; Shared
+![shared]
+!radio_item
+
 ; Free Stalkers
 ![stalker_loadout]
 detector_geiger					= true, 1, 100
 !detector_simple
+!detector_anomaly
 
 ; Bandits
 ![bandit_loadout]
 detector_geiger					= true, 1, 100
 !detector_simple
+!detector_anomaly
 
 ; Ecologists
 ![ecolog_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
 detector_simple					= true, 1, 500
+!detector_anomaly
 !detector_advanced
 
 ; Duty
@@ -20,30 +27,35 @@ detector_simple					= true, 1, 500
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
 !detector_simple
+!detector_anomaly
 
 ; Freedom
 ![freedom_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
 !detector_simple
+!detector_anomaly
 
 ; Mercenaries
 ![killer_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
 !detector_simple
+!detector_anomaly
 
 ; Military
 ![army_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
 !detector_simple
+!detector_anomaly
 
 ; Monolith
 ![monolith_loadout]
 detector_geiger					= true, 1, 100
 !detector_radio
 !detector_simple
+!detector_anomaly
 !cigar3
 
 ; Clear Sky
@@ -52,6 +64,7 @@ detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
 detector_simple					= true, 1, 500
 !detector_advanced
+!detector_anomaly
 !device_pda_2
 
 ; Renegades
@@ -59,19 +72,21 @@ detector_simple					= true, 1, 500
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
 !detector_simple
+!detector_anomaly
 
 ; Sin
 ![greh_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
 !detector_simple
-
+!detector_anomaly
 
 ; UNISG
 ![isg_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
 !detector_simple
+!detector_anomaly
 
 
 ; Money
