Redistribute backpacks in new game loadouts

--- a/gamedata/configs/items/settings/mod_new_game_loadouts_z_saint_overrides.ltx
+++ b/gamedata/configs/items/settings/mod_new_game_loadouts_z_saint_overrides.ltx
@@ -1,16 +1,24 @@
 ; Shared
 ![shared]
 !radio_item
+!guitar_a
+!device_torch_dummy
+!lead_box
+itm_backpack					= false, 1, 0
 
 ; Free Stalkers
 ![stalker_loadout]
 detector_geiger					= true, 1, 100
+!itm_backpack
 !detector_simple
 !detector_anomaly
 
 ; Bandits
 ![bandit_loadout]
 detector_geiger					= true, 1, 100
+!itm_backpack
+!equ_small_pack
+!equ_tourist_pack
 !detector_simple
 !detector_anomaly
 
@@ -19,6 +27,9 @@ detector_geiger					= true, 1, 100
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
 detector_simple					= true, 1, 500
+lead_box						= true, 1, 100
+!itm_backpack
+!equ_small_military_pack
 !detector_anomaly
 !detector_advanced
 
@@ -26,6 +37,8 @@ detector_simple					= true, 1, 500
 ![dolg_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
+!itm_backpack
+!equ_small_military_pack
 !detector_simple
 !detector_anomaly
 
@@ -33,6 +46,8 @@ detector_radio					= true, 1, 200
 ![freedom_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
+!itm_backpack
+!equ_small_military_pack
 !detector_simple
 !detector_anomaly
 
@@ -40,6 +55,8 @@ detector_radio					= true, 1, 200
 ![killer_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
+!itm_backpack
+!equ_small_military_pack
 !detector_simple
 !detector_anomaly
 
@@ -47,12 +64,16 @@ detector_radio					= true, 1, 200
 ![army_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
+!itm_backpack
+!equ_small_military_pack
 !detector_simple
 !detector_anomaly
 
 ; Monolith
 ![monolith_loadout]
 detector_geiger					= true, 1, 100
+!itm_backpack
+!equ_small_military_pack
 !detector_radio
 !detector_simple
 !detector_anomaly
@@ -63,6 +84,9 @@ detector_geiger					= true, 1, 100
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
 detector_simple					= true, 1, 500
+lead_box						= true, 1, 100
+!itm_backpack
+!equ_small_military_pack
 !detector_advanced
 !detector_anomaly
 !device_pda_2
@@ -71,6 +95,8 @@ detector_simple					= true, 1, 500
 ![renegade_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
+!itm_backpack
+!equ_small_military_pack
 !detector_simple
 !detector_anomaly
 
@@ -78,6 +104,8 @@ detector_radio					= true, 1, 200
 ![greh_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
+!itm_backpack
+!equ_small_military_pack
 !detector_simple
 !detector_anomaly
 
@@ -85,6 +113,8 @@ detector_radio					= true, 1, 200
 ![isg_loadout]
 detector_geiger					= true, 1, 100
 detector_radio					= true, 1, 200
+!itm_backpack
+!equ_small_military_pack
 !detector_simple
 !detector_anomaly
 
