Reduce available points pool for new game loadouts

--- a/gamedata/configs/items/settings/mod_new_game_loadouts_z_saint_overrides.ltx
+++ b/gamedata/configs/items/settings/mod_new_game_loadouts_z_saint_overrides.ltx
@@ -1,3 +1,9 @@
+; Points
+![points]
+total_points_eco_1 = 700
+total_points_eco_2 = 500
+total_points_eco_3 = 300
+
 ; Shared
 ![shared]
 !radio_item
